--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -59,6 +59,15 @@ body {
     --red: #9E2423;
     --main-foreground: #f1eee5;
     --map: rgba(255, 255, 255, 0.5);
+
+
+    --dashboard: 135deg, #5B3B8A 0%, #4A7B9D 50%, #E4E4E4 100%;
+    --dashboard-web: 135deg, #5B3B8A 0%, #4A7B9D 50%, #E4E4E4 100%;
+  }
+
+  .dark {
+    --dashboard: 135deg, #003B5C 0%, #005B77 50%, #D9D9D9 100%;
+    --dashboard-web: 135deg, #003B5C 0%, #005B77 50%, #D9D9D9 100%;
   }
 }
 
@@ -107,7 +116,7 @@ body {
   .dashboard {
     color: var(--main-foreground);
     background: #0F2027;
-    background: -webkit-linear-gradient(330deg, #2C5364, #203A43, #0F2027);
-    background: linear-gradient(330deg, #2C5364, #203A43, #0F2027);
+    background: -webkit-linear-gradient(var(--dashboard-web));
+    background: linear-gradient(var(--dashboard));
   }
 }
