--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -101,6 +101,10 @@ body {
     @apply border-border;
   }
 
+  html {
+    scroll-behavior: smooth;
+  }
+
   body {
     @apply text-foreground;
   }
@@ -118,5 +122,13 @@ body {
     background: #0F2027;
     background: -webkit-linear-gradient(var(--dashboard-web));
     background: linear-gradient(var(--dashboard));
+  }
+
+  .thinkforge-radial-bg {
+    background: radial-gradient(127.84% 127.84% at 50% -27.84%, #6A68D2 0%, #1D1C28 100%);
+  }
+
+  .thinkforge-bg {
+    background: #1D1C28;
   }
 }
