--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -131,6 +131,16 @@ body {
     font-style: normal;
   }
 
+  .consumer {
+    background: -webkit-linear-gradient(135deg, #003b5c 0%, #005b77 50%, #d9d9d9 100%);
+    background: linear-gradient(135deg, #003b5c 0%, #005b77 50%, #d9d9d9 100%);
+  }
+
+  .provider {
+    background: -webkit-linear-gradient(135deg, #5b3b8a 0%, #4a7b9d 50%, #e4e4e4 100%);
+    background: linear-gradient(135deg, #5b3b8a 0%, #4a7b9d 50%, #e4e4e4 100%);
+  }
+
   .dashboard {
     color: var(--main-foreground);
     background: #0f2027;
